--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,8 @@
 [tool.poetry]
 name = "python-test-environment"
 version = "0.1.0"
+description = ""
+authors = []
 readme = "README.md"
 
 [tool.poetry.dependencies]
