--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ scikit-learn = "^1.2.2"
 torch = "^2.0.0"
 rdkit = "^2022.9.5"
 scipy = "^1.10.1"
+jupyter = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
