--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ torch = "^2.0.0"
 rdkit = "^2022.9.5"
 scipy = "^1.10.1"
 jupyter = "^1.0.0"
+pandas = "^1.5.3"
 
 [build-system]
 requires = ["poetry-core"]
