--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ rdkit = "^2022.9.5"
 scipy = "^1.10.1"
 jupyter = "^1.0.0"
 pandas = "^1.5.3"
+matplotlib = "^3.7.1"
+seaborn = "^0.12.2"
 
 [build-system]
 requires = ["poetry-core"]
