--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ jupyter = "^1.0.0"
 pandas = "^1.5.3"
 matplotlib = "^3.7.1"
 seaborn = "^0.12.2"
+mordred = "^1.2.0"
 
 [build-system]
 requires = ["poetry-core"]
